scribble-assertions/src/test/resources/bad/extensions/annotations/ChoiceOutOfScopeVar.scr
module bad.extensions.annotations.ChoiceOutOfScopeVar;


type <java> "java.lang.Integer" from "rt.jar" as Integer;
type <java> "java.lang.Long" from "rt.jar" as Long;


global protocol Prot(role A, role B, role C)
{
rec Loop {
	choice at A {
		ADD(x:Integer) from A to B;  
		ADD(z:Integer) from B to C;
		 
	} or {
		RES(y:Integer) from A to B;
		RES(z:Integer) from B to C; 
		continue Loop;
		}
	}
	
	RES(z) from A to C; 
}